added password reset feature

--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -26,6 +26,10 @@
         </p>
     </p>
     <p>New user? <a href="{{ url_for('register') }}">Click to register!</a></p>
+    <p>
+        Forgot your password?
+        <a href="{{ url_for('reset_password_request') }}">Click here to reset it.</a>
+    </p>
 </form>
 
 {% endblock %}
