--- a/app/templates/500.html
+++ b/app/templates/500.html
@@ -1,8 +1,8 @@
+ 
 {% extends "base.html" %}
 
-{% block content %}
-    <h1>An unexpected error has occured, seriously we did not expect this particular error!</h1>
-    <p>Do not panic, the master of errors has been summoned for questioning. We will shortly be rounding up his family for immediate transportation to one of our 'friendly' labor camps.</p>
+{% block app_content %}
+    <h1>An unexpected error has occurred</h1>
+    <p>The administrator has been notified. Sorry for the inconvenience!</p>
     <p><a href="{{ url_for('index') }}">Back</a></p>
-
 {% endblock %}
