--- a/app/templates/login.html
+++ b/app/templates/login.html
@@ -1,35 +1,17 @@
-{% extends "base.html" %}
+{% extends 'base.html' %}
+{% import 'bootstrap/wtf.html' as wtf %}
 
-{% block content %}
-<h1>Sign In</h1>
-<form action="" method="post" novalidate>
-    {{ form.hidden_tag() }}
+{% block app_content %}
+    <h1>Sign In</h1>
+    <div class="row">
+        <div class="col-md-4">
+            {{ wtf.quick_form(form) }}
+        </div>
+    </div>
+    <br>
+    <p>New User? <a href="{{ url_for('register') }}">Click to Register!</a></p>
     <p>
-        {{ form.username.label }}<br>
-        {{ form.username(size=32) }}
-        {% for error in form.username.errors %}<br>
-        <span style="color:red;">{{ error }}</span>
-        {% endfor %}
+        Forgot Your Password?
+        <a href="{{ url_for('reset_password_request') }}">Click to Reset It</a>
     </p>
-    <p>
-        {{ form.password.label }}<br>
-        {{ form.password(size=32) }}
-        {% for error in form.password.errors %}<br>
-        <span style="color: red;">{{ error }}</span>
-        {% endfor %}
-    </p>
-    <p>
-        {{ form.remember_me() }}
-        {{ form.remember_me.label }}
-        <p>
-            {{ form.submit() }}
-        </p>
-    </p>
-    <p>New user? <a href="{{ url_for('register') }}">Click to register!</a></p>
-    <p>
-        Forgot your password?
-        <a href="{{ url_for('reset_password_request') }}">Click here to reset it.</a>
-    </p>
-</form>
-
 {% endblock %}
